--- a/src/_includes/page.html
+++ b/src/_includes/page.html
@@ -3,7 +3,7 @@ layout: default.html
 ---
 <div class="mt-16 mb-8 self-center max-w-4xl w-full">
   <h1 class="px-4 md:px-12 text-3xl md:text-5xl font-bold drop-shadow-xl text-white mb-4">
-    {{ title }} lorem ipsum dolor lots of text
+    {{ title }}
   </h1>
 
   <div class="md:bg-indigo-500 md:border-indigo-500 md:border-[16px] md:rounded-xl md:shadow-xl">
