--- a/src/_includes/head/web-app.html
+++ b/src/_includes/head/web-app.html
@@ -5,6 +5,9 @@
 <meta name="apple-mobile-web-app-capable" content="{{ site.web-app-capable }}">
 <meta name="apple-mobile-web-app-status-bar-style" content="{{ site.web-app-style }}">
 
+<meta name="mobile-web-app-capable" content="{{ site.web-app-capable }}">
+<meta name="theme-color" content="{{ site.web-app-color }}">
+
 <!-- Startup images -->
 <!-- 1: iPhone 3GS, pre-2011 iPod Touch -->
 <!-- 2: iPhone 4, 4S and 2011 iPod Touch-->
