--- a/src/_includes/head/meta.html
+++ b/src/_includes/head/meta.html
@@ -1,8 +1,12 @@
+{% assign page_keywords = page.keywords | split: ', ' | compact %}
+{% assign site_keywords = site.keywords | split: ', ' | compact %}
+{% assign keywords = page_keywords | concat: site_keywords | join: ', '%}
 <meta http-equiv="Content-Type" content="text/html; charset={{ site.charset }}">
-<meta http-equiv="cleartype" content="on">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="page-datetime" content="{% if page.date-modified %}{{page.date-modified}}{% else if page.date-created %}{{page.date-created}}{% else %}{{site.time | date: "%Y-%m-%d"}}{% endif %}">
 <meta name="author" content="{{ '/humans.txt' | prepend: site.baseurl }}">
-<meta name="keywords" content="{{page.keywords}} {{site.keywords}}">
+<meta name="keywords" content="{{ keywords }}">
 <meta name="no-email-collection" content="{{ '/terms-of-service' | prepend: site.baseurl }}">
-<meta name="description" content="{{site.description}}">
+<meta name="description" content="{{ site.description }}">
+<meta name='HandheldFriendly' content='True'>
+<meta name='MobileOptimized' content='375'>
