--- a/src/assets/css/site-colophon.css
+++ b/src/assets/css/site-colophon.css
@@ -47,6 +47,10 @@
     justify-content: center;
   }
 
+  .contact-info dl {
+    margin-block-end: 0;
+  }
+
   .contact-info dt,
   .contact-info dd {
     align-self: center;
